--- a/trunk/SMFSync/changelog.txt
+++ b/trunk/SMFSync/changelog.txt
@@ -1,3 +1,5 @@
+[245]
+-Cleanup
 [244]
 -Moved signature and avatar update from playerupdate to guildupdate
 [243]
@@ -60,13 +62,7 @@ Todo
 -clean up code to abide by the 80 cols rule
 
 Bugs
-Running Armorysync - Guild - Armory Memberlist Sync
-addons/smfsync/inc/update_hook.php
-  Notice line 84: Undefined index: Name
-  Notice line 130: Undefined index: Name
 On every user updated - Personal text not updated. May be current or user not found.
 
 Even with SMF disabled, it will use the login script. It shouldn't.
 
-addons/smfsync/inc/update_hook.php
-  Notice line 273: Undefined index: Zone
