--- a/trunk/armorysync/changelog.txt
+++ b/trunk/armorysync/changelog.txt
@@ -2,6 +2,10 @@ ArmorySync v2.6.0
 Package updated Month DD, YYYY
 $Id$
 
+svn[237]
+- fixed guildadd
+- changed encoding of esES.php
+
 svn[236]
 - replaced _link logic with a form and autosubmit java function
   this way we put job_id in $_POST and can remeber is the status windows was
