--- a/SMFSync/changelog.txt
+++ b/SMFSync/changelog.txt
@@ -1,9 +1,11 @@
+[253]
+-Linux server compatibility issue fixed. (Require case.)
 [252]
 -Oops. Forgot about a hardcoded path in login.php
 [251]
 -Changed inc/login.php to load IFrame for inc/loginForm.php
 --This stopped the problem of when logging in, being redirected
---to the forum instead of to the page you wanted. 
+--to the forum instead of to the page you wanted.
 -Again, a jump in the version number.
 [246]
 -Added inc/loginForm.php
